added maven exec plugin to allow application to be run using mvn